--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.9",
     "passport": "^0.4.0",
