--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.9",
+    "node-geocoder": "^3.22.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
