--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
+    "moment": "^2.23.0",
+    "momentjs": "^2.0.0",
     "mongoose": "^5.3.9",
     "node-geocoder": "^3.22.0",
     "passport": "^0.4.0",
