--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "start.js",
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
@@ -11,11 +12,10 @@
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.23.0",
-    "momentjs": "^2.0.0",
     "mongoose": "^5.3.9",
     "node-geocoder": "^3.22.0",
+    "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0",
     "sanitizer": "^0.1.3"
