--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "async": "^2.6.1",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "connect-flash": "^0.1.1",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -13,6 +15,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.23.0",
     "mongoose": "^5.3.9",
+    "multer": "^1.4.1",
     "node-geocoder": "^3.22.0",
     "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
